# apprunner

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
docs/: DEPENDENCY-GRAPH.md
docs/tickets/: TICKET-01-project-scaffold.md  TICKET-02-db-module.md  TICKET-03-health-check.md  TICKET-04-process-module.md  TICKET-05-vt-parser.md  TICKET-06-metrics-module.md  TICKET-07-tui-core.md  TICKET-08-tui-form.md  TICKET-09-tui-file-browser.md  TICKET-10-ghostty-attach.md  TICKET-11-runtime-alerts.md  TICKET-12-cli-completions-uninstall.md  TICKET-13-install-script.md  TICKET-14-integration-testing.md  TICKET-15-mask-dependencies.md  TICKET-16-mask-db-model.md  TICKET-17-mask-proxy-engine.md  TICKET-18-mask-tui-tabs.md  TICKET-19-mask-tui-form.md  TICKET-20-mask-lifecycle.md  TICKET-21-mask-integration.md  TICKET-22-template-variables.md
src/: alerts.rs  app.rs  install.rs  lib.rs  main.rs  template.rs
src/db/: mod.rs  models.rs  operations.rs
src/ghostty/: mod.rs
src/mask/: log.rs  mod.rs  proxy.rs
src/metrics/: mod.rs
src/process/: health.rs  mod.rs  pty.rs  restart.rs
src/tui/: file_browser.rs  form.rs  input.rs  mask_form.rs  mod.rs  ui.rs
src/vt/: mod.rs
tests/: integration_test.rs
