[package]
name = "apprunner"
version = "0.1.0"
edition = "2021"
description = "A TUI app runner for managing local development processes"
license = "MIT"

[[bin]]
name = "apprunner"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rusqlite = { version = "0.31", features = ["bundled"] }
portable-pty = "0.8"
vte = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
sysinfo = "0.31"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.10.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio", "server", "http1"] }
http-body-util = "0.1.3"
reqwest = { version = "0.13.4", features = ["stream"] }
futures-util = "0.3"
which = "6"
regex = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
